--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	
-	<script src="js/unslider.min.js"></script>
-	<script src="js/init.js"></script>
 </head>
 <body>
 	<div class ="header">
@@ -52,8 +51,10 @@
 		</div>
 	</div>
 	<div class="footer">
-
+		
 	</div>
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/unslider.min.js"></script>
+	<script src="js/init.js"></script>
 </body>
 </html>
