--- a/profile.html
+++ b/profile.html
@@ -2,61 +2,66 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Indie Brigade - Profile</title>
-
+	<title>Testbed Oricana</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="js/unslider.min.js"></script>
-	<script src="js/init.js"></script>
 </head>
 <body>
-	<div class ="header">
-		<div class="header-container">
-			<div class="logo">
-				<img src="http://placehold.it/150x75" />
-			</div>
-			<div class="menu">
-				<ul>
-					<li>Menu01</li>
-					<li>Menu02</li>
-					<li>Menu03</li>
-					<li>Menu04</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="cover">
-		<div class="skill-color">
-			&nbsp;
-		</div>
-		<div class="cover-picture">
-			<img src="http://placehold.it/150x75" />
-		</div>
-	</div>
-	<div class="container">
-		<div class="profile-infos">
-			<div class="profile-picture">
-				<img src="http://placehold.it/150x150" />
-			</div>
-			<div class="button-options">
-				<button class="message-button">
-					Message
-				</button>
-				<button class="message-watchlist">
-					watch List
-				</button>
-			</div>
-			<div class="about">
-				<h2>About</h2>
-			</div>
-			<div class="social">
-				<h2>Social</h2>
-			</div>
-		</div>
-		<div class="profile-overview">
-			<h2>Profile Overview</h2>
-		</div>
-	</div>
+<header id="top">
+	<aside class="logo">
+		<img src="http://placehold.it/150x75" />
+	</aside>
+	<nav class="nav-top">
+		<ul>
+			<li>Menu 1</li>
+			<li>Menu 2</li>
+			<li>Menu 3</li>
+			<li>Menu 4</li>
+		</ul>
+	</nav>
+</header>
+
+<section class="container">
+<aside class="school"></aside>
+<aside id="user">
+	<aside class="userpic">Cedric</aside>
+	<section></section>
+	<article class="userdesc">
+		<h1>About Me</h1>
+		<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum accusantium, fugit adipisci, pariatur quasi aspernatur nostrum dignissimos. Cum nesciunt impedit neque eveniet? Aliquam libero doloremque repellat soluta odit, dignissimos illum!Optio quod ducimus, dicta corrupti excepturi, ratione amet est aliquam odio corporis obcaecati libero voluptatem, hic similique eligendi dolores fugiat dolore commodi ipsa iusto minus. Unde amet voluptates totam ex.</p>
+	</article>
+	<aside class="social">
+		<ul>
+			<li>G+</li>
+			<li>FB</li>
+			<li>TW</li>
+		</ul>
+	</aside>
+	<section id="profile">
+		<h1>Cedric</h1>
+		<aside class="userlist">Also great at
+		<ul>
+			<li>3D Artist</li>
+			<li>Anim 3D</li>
+			<li>Sound Design</li>
+		</ul>
+		</aside>
+		<aside class="userlist">Also good at
+		<ul>
+			<li>3D Artist</li>
+			<li>Anim 3D</li>
+			<li>Sound Design</li>
+		</ul>
+		</aside>
+	</section>
+</aside>
+</section>
+
+<footer>
+	
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/unslider.min.js"></script>
+	<script src="js/init.js"></script>
 </body>
 </html>
