Added compass to lib to get transistion mixins (temp) index3 has the full footer text plus notes for simon

--- a/index3.html
+++ b/index3.html
@@ -52,21 +52,30 @@
 		<aside class="up-event"></aside>
 	</section>
 	<footer>
-		<nav >
+		<nav class="foot">
 			<ul>
-				<li><a href="#">Link01</a></li>
-				<li><a href="#">Link02</a></li>
-				<li><a href="#">Link03</a></li>
-				<li><a href="#">Link04</a></li>
-				<li><a href="#">Link05</a></li>
-				<li><a href="#">Link06</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Calendar</a></li>
+				<li><a href="#">Devs</a></li>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">R&amp;D</a></li>
+				<li><a href="#">Schools</a></li>
 			</ul>
 		</nav>
 		<aside class="social">
-			<p>blablabla</p>
+			<ul>
+				<li><a href="#">G+</a></li>
+				<li><a href="#">FB</a></li>
+				<li><a href="#">Tw</a></li>
+			</ul>
 		</aside>
 		<aside class="legal">
-			<p>blablabla2</p>
+			<ul>
+				<li><a href="#">Privacy Policy</a></li>
+				<li><a href="#">Terms and Conditions</a></li>
+				<li>&copy; Indie Brigade 2015-20XX 
+				<!-- Simon when you'll do the conversion to Ruby make the date like <? date('Y'); ?> equivalent but more like if date('Y') => 2015 then echo 2015-date('Y') else date('Y')--> </li>
+			</ul>
 		</aside>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
