Added font-awsome rel for testing if it will be easier than assets

--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Testbed Oricana</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
 	<header id="top">
@@ -64,9 +64,9 @@
 		</nav>
 		<aside class="social">
 			<ul>
-				<li><a href="#">G+</a></li>
-				<li><a href="#">FB</a></li>
-				<li><a href="#">Tw</a></li>
+				<li><a href="#"><i class="fa fa-envelope"></i></a></li>
+				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 			</ul>
 		</aside>
 		<aside class="legal">
