Switched a and li

--- a/index3.html
+++ b/index3.html
@@ -64,9 +64,9 @@
 		</nav>
 		<aside class="social">
 			<ul>
-				<li><a href="#"><i class="fa fa-envelope fa-2x"></i></a></li>
-				<li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+				<a href="#"><li><i class="fa fa-envelope"></i></li></a>
+				<a href="#"><li><i class="fa fa-facebook"></i></li></a>
+				<a href="#"><li><i class="fa fa-twitter"></i></li></a>
 			</ul>
 		</aside>
 		<aside class="legal">
