mostly finished footer although weird prob under the footer

--- a/index3.html
+++ b/index3.html
@@ -74,7 +74,8 @@
 				<li><a href="#">Privacy Policy</a></li>
 				<li><a href="#">Terms and Conditions</a></li>
 				<li>&copy; Indie Brigade 2015-20XX 
-				<!-- Simon when you'll do the conversion to Ruby make the date like <? date('Y'); ?> equivalent but more like if date('Y') => 2015 then echo 2015-date('Y') else date('Y')--> </li>
+				</li>
+				<!-- Simon when you'll do the conversion to Ruby make the date like <? date('Y'); ?> equivalent but more like if date('Y') => 2015 then echo 2015-date('Y') else date('Y')--> 
 			</ul>
 		</aside>
 	</footer>
