--- a/landing.html
+++ b/landing.html
@@ -11,21 +11,21 @@
 	<h1 class="logo-landing">Indie Brigade</h1>
 	<h2 class="tagline"><strong>Find</strong> devs. <strong>Connect</strong> to them. <strong>Create</strong> games.</h2>
 	<section class="land">
-		<aside class="icon"></aside>
-		<article><h1>About us</h1>Indie Brigade stands for “INDIE BRIdge for GAme DEvs”. We want to allows game devs from all over to reach out to one another and start making games of all types and sizes. Devs can contact other members and create project pages to look for one or more dev. Keep track of devs you have messaged and projects that interest you.</article>
+		<aside class="icon"><img src="images/splash_about.png" alt="About us"></aside>
+		<article><h1>About us</h1>Indie Brigade stands for “<strong>INDIE BRI</strong>dge for <strong>GA</strong>me <strong>DE</strong>vs”. We want to allows game devs from all over to reach out to one another and start making games of all types and sizes. Devs can contact other members and create project pages to look for one or more dev. Keep track of devs you have messaged and projects that interest you.</article>
 	</section>
 	<section class="land">
-		<aside class="icon"></aside>
+		<aside class="icon"><img src="images/splash_signup.png" alt="Sign up"></aside>
 		<article><h1>Sign Up</h1>Signing up is quick and easy Only your email, name and role are needed. Your full profile can be completed upon a further visit. Only logged in devs are able to search for projects or see members’ profile pages.</article>
 	</section>
 	<section class="land">
-		<aside class="icon"></aside>
+		<aside class="icon"><img src="images/splash_members.png" alt="Members"></aside>
 		<article><h1>Members</h1>Devs are divided in 4 categories that are always labelled through their colors: design, art, code and other. These colors will help you quickly identify skills and roles that members and projects are referring to.</article>
 	</section>
 	<h3 class="tagline">Reserve your account today!</h3>
 	</section>
 	<footer>
-		<nav class="foot">
+		<!-- <nav class="foot">
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Calendar</a></li>
@@ -34,7 +34,7 @@
 				<li><a href="#">R&amp;D</a></li>
 				<li><a href="#">Schools</a></li>
 			</ul>
-		</nav>
+		</nav> -->
 		<aside class="social">
 			<ul>
 				<a href="#"><li><i class="fa fa-envelope"></i></li></a>
