Added the Materialize.js CDN added forms too

--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
 	<title>Testbed Oricana</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>  
 <body>
 	<section class="container">
@@ -23,6 +24,25 @@
 		<article><h1>Members</h1>Devs are divided in 4 categories that are always labelled through their colors: design, art, code and other. These colors will help you quickly identify skills and roles that members and projects are referring to.</article>
 	</section>
 	<h3 class="tagline">Reserve your account today!</h3>
+	
+	
+	
+	<form action="">
+			<div class="input-field">
+          <input id="email" type="email" class="validate" required>
+          <label for="email">Email</label>>
+        </div>
+        <div class="input-field">
+          <input id="password" type="password" class="validate" required>
+          <label for="password">Password</label>
+        </div>
+        <div class="input-field">
+          <input id="cpassword" type="password" class="validate" required>
+          <label for="cpassword">Confirm Password</label>
+        </div>
+			<button class="signup" type="submit" >Sign Up!</button>
+		</form>
+	
 	</section>
 	<footer>
 		<!-- <nav class="foot">
@@ -55,5 +75,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="js/unslider.min.js"></script>
 	<script src="js/init.js"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+          
 </body>
 </html>
