Input has color modifed and landing new section form

--- a/landing.html
+++ b/landing.html
@@ -26,11 +26,11 @@
 	<h3 class="tagline">Reserve your account today!</h3>
 	
 	
-	
+	<section id="sign">
 	<form action="">
 			<div class="input-field">
           <input id="email" type="email" class="validate" required>
-          <label for="email">Email</label>>
+          <label for="email">Email</label>
         </div>
         <div class="input-field">
           <input id="password" type="password" class="validate" required>
@@ -42,6 +42,7 @@
         </div>
 			<button class="signup" type="submit" >Sign Up!</button>
 		</form>
+		</section>
 	
 	</section>
 	<footer>
