Modified border radius of button

--- a/landing.html
+++ b/landing.html
@@ -30,15 +30,15 @@
 	<form action="">
 			<div class="input-field">
           <input id="email" type="email" class="validate" required>
-          <label for="email">Email</label>
+          <label for="email">e-mail address</label>
         </div>
         <div class="input-field">
           <input id="password" type="password" class="validate" required>
-          <label for="password">Password</label>
+          <label for="password">password</label>
         </div>
         <div class="input-field">
           <input id="cpassword" type="password" class="validate" required>
-          <label for="cpassword">Confirm Password</label>
+          <label for="cpassword">confirm password</label>
         </div>
 			<button class="signup" type="submit" >Sign Up!</button>
 		</form>
