--- a/landing.html
+++ b/landing.html
@@ -40,7 +40,7 @@
           <input id="cpassword" type="password" class="validate" required>
           <label for="cpassword">confirm password</label>
         </div>
-			<button class="signup" type="submit" >Sign Up!</button>
+			<button class="signup" type="submit" >Sign Up</button>
 		</form>
 		</section>
 	
