Done SVG support + added extra div for form completed in landing

--- a/landing.html
+++ b/landing.html
@@ -42,6 +42,15 @@
         </div>
 			<button class="signup" type="submit" >Sign Up</button>
 		</form>
+	<div class="formdone">
+		<h3>Thank you!<br />
+		Tell us what's your speciality for our poll</h3>
+
+		<a href"#"><img src="images/ind_sign_art.png" alt="Art"></a>
+		<a href"#"><img src="images/ind_sign_code.png" alt="Code"></a>
+		<a href"#"><img src="images/ind_sign_design.png" alt="Design"></a>
+		<a href"#"><img src="images/ind_sign_other.png" alt="Other"></a>
+	</div>
 		</section>
 	
 	</section>
