Added font awesome icon to the nav menu

--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
 <body>
 	<header id="top">
 		<aside class="logo">
-			<img src="http://placehold.it/150x75" />
+			<img src="images/logo.svg" />
 		</aside>
 		<nav class="nav-top">
 			<ul>
@@ -19,7 +19,16 @@
 				<li>Menu 4</li>
 			</ul>
 		</nav>
+		<section class="menu-icons">
+		<a href="#"><i class="fa fa-search"></i></a>
+		<a href="#"><i class="fa fa-envelope"></i></a>
+		<a href="#"><i class="fa fa-star"></i></a>
+		</section>
+		
+
+		
 		<aside class="profile">&nbsp;</aside>
+		
 	</header>
 	<aside class="slider">
 		<ul>
