--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,7 @@
 </head>  
 <body>
 	<section class="container">
-	<h1 class="logo-landing"><img src="images/logo.svg" alt="Indie Brigade"></h1>
+	<h1 class="logo-landing"><img src="images/logo.svg" alt="Indie Brigadetu fini"></h1>
 	<h2 class="tagline"><strong>Find</strong> devs. <strong>Connect</strong> to them. <strong>Create</strong> games.</h2>
 	<section class="land">
 		<aside class="icon"><img src="images/splash_about.png" alt="About us"></aside>
