--- a/landing.html
+++ b/landing.html
@@ -50,6 +50,15 @@
 		<a href"#"><img src="images/ind_sign_code.png" alt="Code"></a>
 		<a href"#"><img src="images/ind_sign_design.png" alt="Design"></a>
 		<a href"#"><img src="images/ind_sign_other.png" alt="Other"></a>
+		<section class="poll-icon">
+			<a href"#"><img src="images/ind_sign_art.svg" alt="Art">Art</a>
+		<a href"#"><img src="images/ind_sign_code.svg" alt="Code">Code</a>
+		<a href"#"><img src="images/ind_sign_design.svg" alt="Design">Design</a>
+		<a href"#"><img src="images/ind_sign_other.svg" alt="Other">Other</a>
+
+		</section>
+
+		
 	</div>
 		</section>
 	
