Push avec .sgv salut

--- a/landing.html
+++ b/landing.html
@@ -51,10 +51,10 @@
 		<a href"#"><img src="images/ind_sign_design.png" alt="Design"></a>
 		<a href"#"><img src="images/ind_sign_other.png" alt="Other"></a>
 		<section class="poll-icon">
-			<a href"#"><img src="images/ind_sign_art.svg" alt="Art">Art</a>
-		<a href"#"><img src="images/ind_sign_code.svg" alt="Code">Code</a>
-		<a href"#"><img src="images/ind_sign_design.svg" alt="Design">Design</a>
-		<a href"#"><img src="images/ind_sign_other.svg" alt="Other">Other</a>
+			<a href"#"><img src="images/ind_sign_art.svg" alt="Art"><br />Art</a>
+		<a href"#"><img src="images/ind_sign_code.svg" alt="Code"><br />Code</a>
+		<a href"#"><img src="images/ind_sign_design.svg" alt="Design"><br />Design</a>
+		<a href"#"><img src="images/ind_sign_other.svg" alt="Other"><br />Other</a>
 
 		</section>
 
