Added pop-up menu

--- a/index3.html
+++ b/index3.html
@@ -27,7 +27,15 @@
 		
 
 		
-		<aside class="profile">&nbsp;</aside>
+		<aside class="profile">
+			<div>
+				
+			<a href="#">Profile&nbsp;<i class="fa fa-home fa-fw"></i></a>
+			<a href="#">Account Setting&nbsp;<i class="fa fa-home fa-fw"></i></a>
+			<a href="#">Log Out&nbsp;<i class="fa fa-home fa-fw"></i></a>
+				
+			</div>
+		</aside>
 		
 	</header>
 	<aside class="slider">
