Badge on the top right done need to work on label badge

--- a/index3.html
+++ b/index3.html
@@ -21,7 +21,7 @@
 		</nav>
 		<section class="menu-icons">
 		<a href="#"><i class="fa fa-search"></i></a>
-		<a href="#"><i class="fa fa-envelope"></i></a>
+		<a href="#"><i class="fa fa-envelope badge" data-badge="99"></i></a>
 		<a href="#"><i class="fa fa-star"></i></a>
 		</section>
 		
