working on profile added the user mixins

--- a/profile.html
+++ b/profile.html
@@ -23,12 +23,12 @@
 
 <section class="container">
 <aside class="school"></aside>
-<aside id="user">
+<aside id="userprofile">
 	<aside class="userpic">Cedric</aside>
 	<section></section>
 	<article class="userdesc">
 		<h1>About Me</h1>
-		<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum accusantium, fugit adipisci, pariatur quasi aspernatur nostrum dignissimos. Cum nesciunt impedit neque eveniet? Aliquam libero doloremque repellat soluta odit, dignissimos illum!Optio quod ducimus, dicta corrupti excepturi, ratione amet est aliquam odio corporis obcaecati libero voluptatem, hic similique eligendi dolores fugiat dolore commodi ipsa iusto minus. Unde amet voluptates totam ex.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum accusantium, fugit adipisci, pariatur quasi aspernatur nostrum dignissimos. Cum nesciunt impedit neque eveniet? Aliquam libero doloremque repellat soluta odit, dignissimos illum!Optio quod ducimus, dicta corrupti excepturi, ratione amet est aliquam odio corporis obcaecati libero voluptatem, hic similique eligendi dolores fugiat dolore commodi ipsa iusto minus. Unde amet voluptates totam ex.</p>
 	</article>
 	<aside class="social">
 		<ul>
@@ -37,6 +37,7 @@
 			<li>TW</li>
 		</ul>
 	</aside>
+</aside>
 	<section id="profile">
 		<h1>Cedric</h1>
 		<aside class="userlist">Also great at
