Continued work on profile

--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Testbed Oricana</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
 <header id="top">
@@ -31,11 +31,9 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum accusantium, fugit adipisci, pariatur quasi aspernatur nostrum dignissimos. Cum nesciunt impedit neque eveniet? Aliquam libero doloremque repellat soluta odit, dignissimos illum!Optio quod ducimus, dicta corrupti excepturi, ratione amet est aliquam odio corporis obcaecati libero voluptatem, hic similique eligendi dolores fugiat dolore commodi ipsa iusto minus. Unde amet voluptates totam ex.</p>
 	</article>
 	<aside class="social">
-		<ul>
-			<li>G+</li>
-			<li>FB</li>
-			<li>TW</li>
-		</ul>
+			<a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
+			<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
+			<a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
 	</aside>
 </aside>
 	<section id="profile">
