Progress on profile aswell as mod of indie-color mixin

--- a/profile.html
+++ b/profile.html
@@ -38,20 +38,33 @@
 </aside>
 	<section id="profile">
 		<h1>Cedric</h1>
-		<aside class="userlist">Also great at
-		<ul>
-			<li>3D Artist</li>
-			<li>Anim 3D</li>
-			<li>Sound Design</li>
+		<section class="userlist"><h5>Also great at</h5>
+		<ul class="fa-ul">
+			<li><i class="fa-li fa fa-square col-art"></i>3D Artist</li>
+			<li><i class="fa-li fa fa-square col-art"></i>Anim 3D</li>
+			<li><i class="fa-li fa fa-square col-design"></i>Sound Design</li>
 		</ul>
-		</aside>
-		<aside class="userlist">Also good at
-		<ul>
-			<li>3D Artist</li>
-			<li>Anim 3D</li>
-			<li>Sound Design</li>
-		</ul>
-		</aside>
+		</section>
+		<section class="userlist"><h5>Also good at</h5>
+		<ul class="fa-ul">
+  <li><i class="fa-li fa fa-square col-other"></i>in lists</li>
+  <li><i class="fa-li fa fa-square col-art"></i>in lists</li>
+  <li><i class="fa-li fa fa-square col-code"></i>in lists</li>
+  <li><i class="fa-li fa fa-square col-design"></i>in lists</li>
+</ul>
+		</section>
+<aside class="extralist">
+<h5>Conditions</h5>
+	<ul>
+		<li>Online</li>
+		<li>Contract Work</li>
+	</ul>
+	<h6></h6>
+	<ul>
+		<li>English</li>
+		<li>French</li>
+	</ul>
+</aside>
 	</section>
 </aside>
 </section>
