--- a/profile.html
+++ b/profile.html
@@ -59,20 +59,49 @@
 		<li>Online</li>
 		<li>Contract Work</li>
 	</ul>
-	<h6></h6>
+	<h5>Language</h5>
 	<ul>
-		<li>English</li>
-		<li>French</li>
+		<li>English, French</li>
+	</ul>
+		
+	
+</aside>
+<aside class="software">
+	<h5>Software</h5>
+	<ul>
+		<li class="tooltip" data-tipsy="Adobe Photoshop" >
+		<img src="images/softwareicons/adobephotoshop.png" alt="Adobe Photoshop" > </li>
+		<li class="tooltip" data-tipsy="Maya"><img src="images/softwareicons/maya.png" alt="Maya"></li>
+		<li class="tooltip" data-tipsy="Blender"><img src="images/softwareicons/blender.png" alt="Blender" ></li>
+		<li class="tooltip" data-tipsy="Octane"><img src="images/softwareicons/octane.png"  alt="Octane" ></li>
+		<li><a class="modal-trigger" href="#modal1">more...</a></li>
 	</ul>
 </aside>
+
+
 	</section>
+	
 </aside>
 </section>
 
 <footer>
 	
 </footer>
+ <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+
 <script src="js/unslider.min.js"></script>
 	<script src="js/init.js"></script>
 </body>
