profile modal modification in progress

--- a/profile.html
+++ b/profile.html
@@ -89,12 +89,21 @@
 </footer>
  <!-- Modal Structure -->
   <div id="modal1" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+    <div class="modal-content soft-list">
+      <h4>Software</h4>
+      <ul>
+      	<li><img src="images/softwareicons/adobephotoshop.png" alt="Adobe Photoshop" >Adobe Photoshop</li>
+      	<li><img src="images/softwareicons/maya.png" alt="Maya">Maya</li>
+      	<li><img src="images/softwareicons/blender.png" alt="Blender" >Blender</li>
+      	<li><img src="images/softwareicons/octane.png"  alt="Octane" >Octane</li>
+      	<li><img src="images/softwareicons/rpgmaker.png"  alt="RPG Maker" >RPG Maker XP</li>
+      	<li><img src="images/softwareicons/eclipse.png"  alt="Eclipse" >Eclipse</li>
+      	<li><img src="images/softwareicons/rhino.png"  alt="Rhino" >Rhino</li>
+      	<li><img src="images/softwareicons/coreldraw.png"  alt="Corel Draw" >Corel Draw</li>
+      </ul>
     </div>
     <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green button">Agree</a>
     </div>
   </div>
 
